apps/homeassistant/k8s-homeassistant.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8123
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: home-assistant
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
    spec:
      serviceAccountName: home-assistant
      securityContext:
        {}
      containers:
        - name: home-assistant
          securityContext:
            {}
          image: "ghcr.io/home-assistant/home-assistant:stable"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
            - name: mDNS
              containerPort: 21064
              protocol: UDP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
          - mountPath: /config
            name: home-assistant
      volumes:
      - name: home-assistant
        persistentVolumeClaim:
          claimName: home-assistant
      hostNetwork: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`homeassistant.services.luke-domain.com`)
      services:
        - name: home-assistant
          port: 80
